# test-code

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  main.py  prime_multiples.py  pyproject.toml  requirements.txt  test-file-2025-06-19-121205.md  test-file-2025-06-19-122039.md  test-file-2025-06-19-122933.md  test-file-2025-06-19-124141.md  test.py  test_prime_multiples.py
src/: main.py
src/compute/: __init__.py  base.py  hypotenuse.py
